@@ -1,0 +1,8 @@
+{
+  "values": [
+    "bygone:glow_gourd_beige_slice",
+    "bygone:glow_gourd_muave_slice",
+    "bygone:glow_gourd_verdant_slice",
+    "bygone:glow_gourd_dango"
+  ]
+}
